# ObjViewer

./: .gitignore  CMakeLists.txt
assets/models/: model.mtl
shaders/: basic.frag  basic.vert
src/: Camera.c  Camera.h  Material.c  Material.h  Mesh.c  Mesh.h  ObjLoader.c  ObjLoader.h  Shader.c  Shader.h  main.c
